--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,26 @@ nav h3{
     position: relative;
     transition: 200ms ease-in;
 }
+.nav-right{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+.nav-right .fa-shopping-cart{
+    margin-top: 0.5rem;
+}
+.cart-count-container{
+    position: relative;
+}
+.shopping-cart-count{
+    background: #fff;
+    color: #30a30d;
+    padding: 0.05rem 0.3rem;
+    position: absolute;
+    margin-left: -0.5rem;
+    border-radius: 50%;
+    font-size: 0.8rem;
+}
 .rotate span:nth-child(2){
     display: none;
 }
@@ -115,7 +135,7 @@ nav h3{
     /* background:rgb(18, 17, 17); */
     background: var(--penn-red);
     position: fixed;
-    top: 3.5rem;
+    top: 3.9rem;
     left: 0;
     right: 0;
     bottom: 0;
@@ -175,7 +195,7 @@ nav h3{
     justify-content: center;
 }
 .search-filters-container{
-    max-width: 800px;
+    /* max-width: 800px; */
     display: grid;
     gap: 0.8rem;
     justify-content: center;
@@ -189,7 +209,7 @@ nav h3{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    max-width: 800px;
+    /* max-width: 800px; */
     margin: 0 auto;
     margin: 1rem;
     color: #fff;
@@ -208,6 +228,94 @@ nav h3{
     padding: 0.5rem 0.8rem;
     border-radius: 0.5rem;
 }
+/* start of audio player */
+.audio-player-container{
+    color: #fff;
+    background: #090421;
+    padding: 1.5rem 0.8rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* max-width: 800px; */
+    position: relative;
+}
+.audio-progress-bar{
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    background: #ffff;
+    top: 0;
+    left: 0;
+}
+.audio-player-container i{
+color: #fff;
+margin-right: 1rem;
+}
+.audio-player-container img{
+    width: 30px;
+}
+.controls-audio{
+    color: #fff;
+}
+/* end of audio player */
+
+/* START OF SHOPPING CART */
+.cart-image{
+    border: 1px solid #fff;
+    width: 40px;
+    position: relative;
+}
+.cart-image img{
+    width: 40px;
+    height: 30px;
+}
+.shopping-cart-container{
+    color: #bab0b0;
+    padding: 1rem;
+    /* align-items: center; */
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background: #090421;
+    position: fixed;
+    top:5.1rem;
+    bottom: 0;
+    z-index: 1000;
+
+}
+.item-titles, .cart-items-container{
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+    align-items: center;
+    max-width: 800px;
+}
+.item-titles{
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    font-weight: lighter;
+    color: #bab0b0;
+}
+.close-cart-btn{
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    padding: 0.75rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    position: absolute;
+    top:2rem;
+    right: 2.5rem;
+    outline: none;
+    border: none;
+}
+/* END OF SHOPPING CART */
+
+
+
 /* media queries */
 @media(max-width:800px){
     .nav-links{
