--- a/css/styles.css
+++ b/css/styles.css
@@ -269,6 +269,9 @@ margin-right: 1rem;
     width: 40px;
     height: 30px;
 }
+.cart-count-icon{
+    font-size: 1.2rem;
+}
 .shopping-cart-container{
     color: #bab0b0;
     padding: 1rem;
@@ -294,8 +297,8 @@ margin-right: 1rem;
 .item-titles{
     text-transform: uppercase;
     font-size: 0.8rem;
-    font-weight: lighter;
-    color: #bab0b0;
+    font-weight: bolder;
+    color: #edeaea;
 }
 .close-cart-btn{
     width: 20px;
@@ -307,7 +310,7 @@ margin-right: 1rem;
     align-items: center;
     border-radius: 50%;
     position: absolute;
-    top:2rem;
+    top:1.8rem;
     right: 2rem;
     outline: none;
     border: none;
@@ -342,7 +345,13 @@ margin-right: 1rem;
 .checkout-btn{
 width: 100%;
 padding: 0.5rem 1rem;
-font-size: 1.1rem
+font-size: 1.1rem;
+background: #07625d;
+color: #fff;
+border: none;
+outline: none;
+border-radius: 4px;
+margin-top: 1rem;
 }
 /* END OF SHOPPING CART */
 
