--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@ body{
     font-family: 'Kumbh Sans', sans-serif;
     background: #3f0a0c;
     background: url(/img/red\ bg.jpg), #3f0a0c;
+    background-size: cover;
     background-blend-mode: multiply;
 }
 /*start of navigation */
@@ -277,6 +278,7 @@ margin-right: 1rem;
     padding: 1rem;
     /* align-items: center; */
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -300,7 +302,7 @@ margin-right: 1rem;
     font-weight: bolder;
     color: #edeaea;
 }
-.close-cart-btn{
+.close-cart-btn, .close-overlay-btn{
     width: 20px;
     height: 20px;
     text-align: center;
@@ -353,6 +355,107 @@ outline: none;
 border-radius: 4px;
 margin-top: 1rem;
 }
+
+/* START OF LICENSES OVERLAY */
+.licenses-container{
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    height: 100%;
+    /* position: relative; */
+}
+.licenses-overlay{
+color: #fff;
+position: fixed;
+top: 0;
+bottom: 0;
+left: 0;
+right:0;
+height: 700px;
+min-height: 100%;
+width: 100%;
+background: #261e4d;
+z-index: 1000;
+margin: 2rem;
+max-width: 500px;
+display: flex;
+grid-template-columns: 1fr;
+justify-content: center;
+justify-items: center;
+flex-direction: column;
+align-items: center;
+overflow-y: scroll;
+}
+.album-art-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    text-transform: uppercase;
+    padding: 1rem;;
+}
+.album-art-container .beat-title{
+    max-width: 180px;
+    padding: 1rem;
+}
+.album-art-img-container img{
+    max-width: 90px;
+    width: 90px;
+    height: 100%;
+    max-height: 80px;
+}
+.album-art-img-container{
+    background: #093eba;
+    border: 2px solid #fff;
+    position: relative;
+    max-width: 95px;
+    width: 95px;
+    height: 100%;
+    max-height: 55px;
+}
+.license-details-container{
+    background: #080421;
+    padding: 2.4rem 1.5rem;
+    max-width: 400px;
+    width: 100%;
+    margin-bottom: 1rem;
+
+}
+.license-details{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2rem
+}
+.license-title{
+    font-size: 1.4rem;
+    color: #cbc3c3;
+}
+.license-details .item-price{
+    background: #959292;
+    padding: 0.7rem 1.2rem;
+}
+.license-terms{
+    display: flex;
+    gap:0.5rem;
+    align-items: center;
+    margin-top: 1.5rem;
+    color: #959292;
+    font-weight: lighter;
+    cursor: pointer;
+}
+.license-terms .item-price{
+    color: #000 !important;
+}
+.license-terms .fa-shopping-cart{
+    font-size: 0.8rem;
+    margin-right: 0.6rem;
+}
+.license-terms i{
+font-size: 0.7rem
+}
+/* END OF LICENSES OVERLAY */
 /* END OF SHOPPING CART */
 
 
