--- a/css/styles.css
+++ b/css/styles.css
@@ -324,7 +324,7 @@ margin-right: 1rem;
 /* closing the cart upon click */
 .close-entire-cart{
     transform: translateX(-100%);
-    transition: 500ms;
+    transition: 180ms;
 }
 .checkout-container{
     background: #100834;
@@ -419,7 +419,7 @@ overflow-y: scroll;
     padding: 2.4rem 1.5rem;
     max-width: 400px;
     width: 100%;
-    margin-bottom: 1rem;
+    margin: 1rem;
 
 }
 .license-details{
