--- a/css/styles.css
+++ b/css/styles.css
@@ -228,23 +228,31 @@ nav h3{
     color: #fff;
     padding: 0.5rem 0.8rem;
     border-radius: 0.5rem;
+    cursor: pointer;
 }
 /* start of audio player */
+/* .audio-player-wrapper{
+    position: relative;
+} */
 .audio-player-container{
     color: #fff;
-    background: #090421;
-    padding: 1.5rem 0.8rem;
+    background: #0a032b;
+    padding: 0.8rem 0.8rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
     /* max-width: 800px; */
-    position: relative;
+    /* position: relative; */
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 .audio-progress-bar{
     position: absolute;
     height: 2px;
     width: 100%;
-    background: #ffff;
+    background: #998595;
     top: 0;
     left: 0;
 }
@@ -254,9 +262,33 @@ margin-right: 1rem;
 }
 .audio-player-container img{
     width: 30px;
+    height: 30px;
+    border-radius: 4px;
 }
 .controls-audio{
-    color: #fff;
+    color: #998595;
+}
+.audio-player-album-art{
+    border: 2px solid #12074a;;
+    position: relative;
+    border-radius: 4px;
+}
+.audio-player-album-art .fa-play{
+    position: absolute;
+    left: 30%;
+    top: 24%;
+    font-size: 0.8rem;
+    color: #998595;
+}
+.close-audio-player-btn{
+    color: #706d6d !important;
+    position: relative;
+    font-size: 1.2rem;
+    top: -0.6rem;
+    cursor: pointer;
+}
+.closing-audio-player{
+    display: none;
 }
 /* end of audio player */
 
@@ -358,12 +390,13 @@ margin-top: 1rem;
 
 /* START OF LICENSES OVERLAY */
 .licenses-container{
-    display: grid;
+    /* display: grid; */
     grid-template-columns: 1fr;
     justify-content: center;
     height: 100%;
     margin: 2.5rem 2rem;
  /* position: relative; */
+    display: none;
 }
 .licenses-overlay{
 color: #fff;
@@ -372,8 +405,9 @@ top: 0;
 bottom: 0;
 left: 0;
 right:0;
-height: 700px;
-min-height: 100%;
+height: 100%;
+max-height: 800px;
+/* min-height: 100%; */
 width: 100%;
 background: #080421;
 z-index: 1000;
@@ -410,12 +444,20 @@ margin-right: 2rem;
 }
 .album-art-img-container{
     background: #093eba;
-    border: 2px solid #fff;
+    border: 2px solid #b9b6b6;
     position: relative;
     max-width: 95px;
     width: 95px;
     height: 100%;
     max-height: 55px;
+    position: relative;
+}
+.audio-play-btn-license-popup{
+    position: absolute;
+    left:40%;
+    top:32%;
+    font-size: 0.8rem;
+    color: #b9b6b6;
 }
 .license-details-container{
     background: #191435;
@@ -457,6 +499,7 @@ margin-right: 2rem;
 .license-terms i{
 font-size: 0.7rem
 }
+
 /* END OF LICENSES OVERLAY */
 /* END OF SHOPPING CART */
 
@@ -501,4 +544,7 @@ font-size: 0.7rem
         width: 100%;
         margin: 1rem;
     } 
+    /* .licenses-overlay{
+        max-height: 400px;
+    }  */
 }
