--- a/css/styles.css
+++ b/css/styles.css
@@ -414,7 +414,7 @@ margin-top: 1rem;
     height: 100%;
     margin: 2.5rem 2rem;
  /* position: relative; */
-    display: grid;
+    display: none;
 }
 .licenses-overlay{
 color: #fff;
